This fixes the bug where when a unit is deleted then an assessment of the unit would still be saved

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ __pycache__/
 # C extensions
 *.so
 
+# Function to delete and reset database
+delete.py
+
 # Distribution / packaging
 .Python
 build/
